--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: 'Learn how to configure Reducechurn to prevent customer churn. Step-by-step guide for setting up data integration, customer segments, and retention workflows for your subscription business.'
 ---
 
 <img
